lots changed: encapsulated recorder-specific scripts so they only run when microphone is necessary; corrected background image size in css; commented out song collaborator authentication before action; commented out set track before action; removed references to uploader in tracks controller; encapsulated yield into container div; gave container div relative position of 75px below top for nav-bar spacing and color white for readable text; removed all references to audio data visualization from recorder js plugin; added tracks#new to routes; made audio filename more semantic: songname_username.wav; changed bucket storage connection var name to be cleaner, more semantic.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,11 +2,16 @@ body {
   width: 100%;
   background-color: black;
   color: #141414;
-  background-size: cover 700px;
+  background-size: cover;
   background-image: url('/assets/soundboard.png');
   background-repeat: no-repeat;
   overflow: hidden;
+}
 
+.container {
+  position: relative;
+  top: 75px;
+  color: white;
 }
 
 .nav-bar {
